err/samsa.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/kazoo'...
Listing './lib/python3.5/site-packages/kazoo/handlers'...
Listing './lib/python3.5/site-packages/kazoo/protocol'...
Listing './lib/python3.5/site-packages/kazoo/recipe'...
Listing './lib/python3.5/site-packages/kazoo/testing'...
Listing './lib/python3.5/site-packages/kazoo/tests'...
Listing './lib/python3.5/site-packages/kazoo-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/samsa'...
Compiling './lib/python3.5/site-packages/samsa/client.py'...
***   File "./lib/python3.5/site-packages/samsa/client.py", line 315
    except InvalidVersionError, ex:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/samsa/consumer'...
Compiling './lib/python3.5/site-packages/samsa/consumer/consumer.py'...
***   File "./lib/python3.5/site-packages/samsa/consumer/consumer.py", line 289
    except PartitionOwnedError, e:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/samsa/consumer/partitions.py'...
***   File "./lib/python3.5/site-packages/samsa/consumer/partitions.py", line 117
    except OffsetOutOfRangeError, ex:
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/samsa/contrib'...
Compiling './lib/python3.5/site-packages/samsa/handlers.py'...
***   File "./lib/python3.5/site-packages/samsa/handlers.py", line 122
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/samsa/test'...
Compiling './lib/python3.5/site-packages/samsa/test/integration.py'...
***   File "./lib/python3.5/site-packages/samsa/test/integration.py", line 51
    except IOError, err:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/samsa/utils'...
Compiling './lib/python3.5/site-packages/samsa/utils/structuredio.py'...
***   File "./lib/python3.5/site-packages/samsa/utils/structuredio.py", line 73
    print ''.join(["%02X " % ord(x) for x in self.read()]).strip()
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/samsa-0.3.11.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
